--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ jekyll-nord-theme:
 # - about.md
 
 # Build settings
-theme: jekyll-nord-theme
+theme: jekyll-theme-cayman
 
 plugins:
  - jekyll-feed
