--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
-baseURL = 'http://example.org/'
+baseURL = 'http://suryapranav.github.io'
 languageCode = 'en-us'
-title = 'My New Hugo Site'
+title = 'Surya\'s Website'
 theme = "sam"
 
 [[params.mainMenu]]
